--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -67,6 +67,8 @@
     <Compile Include="DAL\IRepositorioPregunta.cs" />
     <Compile Include="DAL\IRepositorio.cs" />
     <Compile Include="DAL\IUnitOfWork.cs" />
+    <Compile Include="Dominio\Categoria.cs" />
+    <Compile Include="Dominio\Dificultad.cs" />
     <Compile Include="Fachada.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -76,13 +78,13 @@
     </Compile>
     <Compile Include="JSON.cs" />
     <Compile Include="ListaVaciaException.cs" />
-    <Compile Include="Pregunta.cs" />
+    <Compile Include="Dominio\Pregunta.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Respuesta.cs" />
-    <Compile Include="ResultadoRespuesta.cs" />
-    <Compile Include="Sesion.cs" />
-    <Compile Include="Usuario.cs" />
+    <Compile Include="Dominio\Respuesta.cs" />
+    <Compile Include="Dominio\ResultadoRespuesta.cs" />
+    <Compile Include="Dominio\Sesion.cs" />
+    <Compile Include="Dominio\Usuario.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
