--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -61,7 +61,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL\EntityFramework\Repositorio.cs" />
+    <Compile Include="DAL\EntityFramework\RepositorioPregunta.cs" />
+    <Compile Include="DAL\EntityFramework\RepositorioSesion.cs" />
+    <Compile Include="DAL\EntityFramework\RepositorioUsuario.cs" />
     <Compile Include="DAL\EntityFramework\ShockQuizDbContext.cs" />
+    <Compile Include="DAL\EntityFramework\UnitOfWork.cs" />
     <Compile Include="DAL\IRepositorioSesion.cs" />
     <Compile Include="DAL\IRepositorioUsuario.cs" />
     <Compile Include="DAL\IRepositorioPregunta.cs" />
