--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -60,6 +60,7 @@
     <Compile Include="JSON.cs" />
     <Compile Include="ListaVaciaException.cs" />
     <Compile Include="Pregunta.cs" />
+    <Compile Include="PreguntaDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respuesta.cs" />
