--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -60,6 +60,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contestar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Contestar.Designer.cs">
+      <DependentUpon>Contestar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\EntityFramework\Mapping\SesionMap.cs" />
+    <Compile Include="DAL\EntityFramework\Mapping\UsuarioMap.cs" />
     <Compile Include="DAL\EntityFramework\Repositorio.cs" />
     <Compile Include="DAL\EntityFramework\RepositorioPregunta.cs" />
     <Compile Include="DAL\EntityFramework\RepositorioSesion.cs" />
@@ -72,26 +80,32 @@
     <Compile Include="DAL\IRepositorio.cs" />
     <Compile Include="DAL\IUnitOfWork.cs" />
     <Compile Include="Dominio\Categoria.cs" />
+    <Compile Include="Dominio\Conjunto.cs" />
     <Compile Include="Dominio\Dificultad.cs" />
     <Compile Include="Fachada.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms\FachadaLogin.cs" />
+    <Compile Include="Forms\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="IO\PreguntaDTO.cs" />
     <Compile Include="JSON.cs" />
     <Compile Include="ListaVaciaException.cs" />
     <Compile Include="Dominio\Pregunta.cs" />
+    <Compile Include="PreguntaDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dominio\Respuesta.cs" />
     <Compile Include="IO\ResultadoRespuesta.cs" />
     <Compile Include="Dominio\Sesion.cs" />
     <Compile Include="Dominio\Usuario.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Contestar.resx">
+      <DependentUpon>Contestar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
