--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -72,13 +72,14 @@
     <Compile Include="DAL\IRepositorio.cs" />
     <Compile Include="DAL\IUnitOfWork.cs" />
     <Compile Include="Dominio\Categoria.cs" />
+    <Compile Include="Dominio\Conjunto.cs" />
     <Compile Include="Dominio\Dificultad.cs" />
     <Compile Include="Fachada.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Contestar.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Contestar.Designer.cs">
+      <DependentUpon>Contestar.cs</DependentUpon>
     </Compile>
     <Compile Include="IO\PreguntaDTO.cs" />
     <Compile Include="JSON.cs" />
@@ -90,8 +91,8 @@
     <Compile Include="IO\ResultadoRespuesta.cs" />
     <Compile Include="Dominio\Sesion.cs" />
     <Compile Include="Dominio\Usuario.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Contestar.resx">
+      <DependentUpon>Contestar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
