--- a/ShockQuiz/App.config
+++ b/ShockQuiz/App.config
@@ -5,6 +5,9 @@
         <section name="entityFramework"
           type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
           requirePermission="false"/>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ShockQuiz.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
@@ -23,4 +26,23 @@
     <add name="ShockQuiz" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ShockQuiz;Integrated Security=True;MultipleActiveResultSets=True;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <applicationSettings>
+    <ShockQuiz.Properties.Settings>
+      <setting name="FactorMinimo" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="FactorMedio" serializeAs="String">
+        <value>3</value>
+      </setting>
+      <setting name="FactorMaximo" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="Limite1" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="Limite2" serializeAs="String">
+        <value>20</value>
+      </setting>
+    </ShockQuiz.Properties.Settings>
+  </applicationSettings>
 </configuration>
