--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -66,6 +66,11 @@
     <Compile Include="Contestar.Designer.cs">
       <DependentUpon>Contestar.cs</DependentUpon>
     </Compile>
+    <Compile Include="DAL\EntityFramework\Mapping\CategoriaMap.cs" />
+    <Compile Include="DAL\EntityFramework\Mapping\ConjuntoMap.cs" />
+    <Compile Include="DAL\EntityFramework\Mapping\DificultadMap.cs" />
+    <Compile Include="DAL\EntityFramework\Mapping\PreguntaMap.cs" />
+    <Compile Include="DAL\EntityFramework\Mapping\RespuestaMap.cs" />
     <Compile Include="DAL\EntityFramework\Mapping\SesionMap.cs" />
     <Compile Include="DAL\EntityFramework\Mapping\UsuarioMap.cs" />
     <Compile Include="DAL\EntityFramework\Repositorio.cs" />
@@ -93,6 +98,11 @@
     <Compile Include="IO\PreguntaDTO.cs" />
     <Compile Include="IO\ResultadoRespuesta.cs" />
     <Compile Include="Dominio\Pregunta.cs" />
+    <Compile Include="Migrations\201912032055427_test1.cs" />
+    <Compile Include="Migrations\201912032055427_test1.designer.cs">
+      <DependentUpon>201912032055427_test1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dominio\Respuesta.cs" />
@@ -103,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912032055427_test1.resx">
+      <DependentUpon>201912032055427_test1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
