--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -60,6 +60,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dominio\ConjuntoOTDB.cs" />
+    <Compile Include="Forms\ConfiguracionAdminForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ConfiguracionAdminForm.Designer.cs">
+      <DependentUpon>ConfiguracionAdminForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ConfigurarSesionForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +128,9 @@
     <Compile Include="Dominio\Respuesta.cs" />
     <Compile Include="Dominio\Sesion.cs" />
     <Compile Include="Dominio\Usuario.cs" />
+    <EmbeddedResource Include="Forms\ConfiguracionAdminForm.resx">
+      <DependentUpon>ConfiguracionAdminForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConfigurarSesionForm.resx">
       <DependentUpon>ConfigurarSesionForm.cs</DependentUpon>
     </EmbeddedResource>
