--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -137,6 +137,10 @@
     <Compile Include="Migrations\201912032124222_test2.designer.cs">
       <DependentUpon>201912032124222_test2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201912032336101_test3.cs" />
+    <Compile Include="Migrations\201912032336101_test3.designer.cs">
+      <DependentUpon>201912032336101_test3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -166,6 +170,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201912032124222_test2.resx">
       <DependentUpon>201912032124222_test2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912032336101_test3.resx">
+      <DependentUpon>201912032336101_test3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
