--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -60,9 +60,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\EntityFramework\FormattedDbEntityValidationException.cs" />
     <Compile Include="DAL\EntityFramework\RepositorioCategoria.cs" />
     <Compile Include="DAL\EntityFramework\RepositorioConjunto.cs" />
     <Compile Include="DAL\EntityFramework\RepositorioDificultad.cs" />
+    <Compile Include="DAL\OpenTriviaDB\JsonMapper.cs" />
     <Compile Include="Dominio\ConjuntoOTDB.cs" />
     <Compile Include="Forms\ConfiguracionAdminForm.cs">
       <SubType>Form</SubType>
@@ -129,17 +131,9 @@
     <Compile Include="IO\PreguntaDTO.cs" />
     <Compile Include="IO\ResultadoRespuesta.cs" />
     <Compile Include="Dominio\Pregunta.cs" />
-    <Compile Include="Migrations\201912032055427_test1.cs" />
-    <Compile Include="Migrations\201912032055427_test1.designer.cs">
-      <DependentUpon>201912032055427_test1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201912032124222_test2.cs" />
-    <Compile Include="Migrations\201912032124222_test2.designer.cs">
-      <DependentUpon>201912032124222_test2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201912032336101_test3.cs" />
-    <Compile Include="Migrations\201912032336101_test3.designer.cs">
-      <DependentUpon>201912032336101_test3.cs</DependentUpon>
+    <Compile Include="Migrations\201912040641134_test1.cs" />
+    <Compile Include="Migrations\201912040641134_test1.designer.cs">
+      <DependentUpon>201912040641134_test1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
@@ -165,14 +159,8 @@
     <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201912032055427_test1.resx">
-      <DependentUpon>201912032055427_test1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201912032124222_test2.resx">
-      <DependentUpon>201912032124222_test2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201912032336101_test3.resx">
-      <DependentUpon>201912032336101_test3.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201912040641134_test1.resx">
+      <DependentUpon>201912040641134_test1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
