--- a/ShockQuiz/Properties/Settings.settings
+++ b/ShockQuiz/Properties/Settings.settings
@@ -1,21 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ShockQuiz.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
   <Profiles />
-  <Settings>
-    <Setting Name="FactorMinimo" Type="System.Double" Scope="Application">
-      <Value Profile="(Default)">5</Value>
-    </Setting>
-    <Setting Name="FactorMedio" Type="System.Double" Scope="Application">
-      <Value Profile="(Default)">3</Value>
-    </Setting>
-    <Setting Name="FactorMaximo" Type="System.Double" Scope="Application">
-      <Value Profile="(Default)">1</Value>
-    </Setting>
-    <Setting Name="Limite1" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">5</Value>
-    </Setting>
-    <Setting Name="Limite2" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">20</Value>
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
