--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -87,6 +87,7 @@
     <Compile Include="DAL\EntityFramework\RepositorioDificultad.cs" />
     <Compile Include="DAL\OpenTriviaDB\JsonMapper.cs" />
     <Compile Include="Dominio\ConjuntoOTDB.cs" />
+    <Compile Include="Excepciones\ContraseñaIncorrectaException.cs" />
     <Compile Include="Excepciones\PreguntasInsuficientesException.cs" />
     <Compile Include="Forms\ConfiguracionAdminForm.cs">
       <SubType>Form</SubType>
@@ -102,7 +103,6 @@
     </Compile>
     <Compile Include="Forms\Controladores\FachadaConfigurarSesion.cs" />
     <Compile Include="Forms\Controladores\FachadaConfiguracionAdmin.cs" />
-    <Compile Include="Forms\Controladores\FachadaMenu.cs" />
     <Compile Include="Forms\Controladores\FachadaRanking.cs" />
     <Compile Include="Forms\MenuForm.cs">
       <SubType>Form</SubType>
