--- a/ShockQuiz/App.config
+++ b/ShockQuiz/App.config
@@ -6,8 +6,8 @@
       <section name="ShockQuiz.Properties.Settings"
         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <section name="entityFramework"
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
@@ -18,6 +18,7 @@
     <providers>
       <!--<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>-->
       <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
           </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
       <parameters>
@@ -29,9 +30,7 @@
     <!--<add name="ShockQuiz" connectionString="Server=sql10.freemysqlhosting.net;Database=sql10314702;Uid=sql10314702;Pwd=IQ1eEYWcRh;Persist Security Info=True" providerName="MySql.Data.MySqlClient" />-->
     <!-- <add name="ShockQuiz" connectionString="Server=localhost;Database=shockquiz;Uid=sant11h;Pwd=sundownss;Persist Security Info=True" providerName="MySql.Data.MySqlClient" />-->
     <!--<add name="ShockQuiz" connectionString="Server=108.160.150.200;Port=3306;Database=nssistemas_santi;Uid=nssistemas_santi;Pwd=6IgvMmZBr;SSLmode=none" providerName="MySql.Data.MySqlClient" />-->
-    <add name="ShockQuiz"
-      connectionString="Data Source=ShockQuiz.sdf;Password=sundownss"
-      providerName="System.Data.SqlServerCe.4.0"/>
+    <add name="ShockQuiz" connectionString="Data Source=ShockQuiz.sdf;Password=sundownss" providerName="System.Data.SqlServerCe.4.0"/>
   </connectionStrings>
 <system.data>
     <DbProviderFactories>
