--- a/ShockQuiz/packages.config
+++ b/ShockQuiz/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
-  <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
-  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
-  <package id="EntityFramework.SqlServerCompact" version="6.4.0" targetFramework="net472" />
-  <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
-  <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="EntityFramework.SqlServerCompact" version="6.4.4" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.12.3" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
 </packages>
