--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -175,6 +175,7 @@
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\ProgressReportModel.cs" />
+    <Compile Include="IO\LoginDTO.cs" />
     <Compile Include="IO\PreguntaDTO.cs" />
     <Compile Include="IO\RespuestaDTO.cs" />
     <Compile Include="IO\ResultadoRespuesta.cs" />
